--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
 		"type": "git",
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
 	},
-	"publisher": "vscode-samples",
+	"publisher": "2over12",
 	"categories": [],
 	"keywords": [
-		"multi-root ready"
+		"sleigh"
 	],
 	"engines": {
 		"vscode": "^1.63.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:sleigh"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
@@ -58,9 +58,10 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -b",
 		"watch": "tsc -b -w",
-		"lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
-		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh"
+		"lint": "eslint ./client/src --ext .ts,.tsx",
+		"postinstall": "cd client && npm install && cd ..",
+		"test": "sh ./scripts/e2e.sh",
+		"package": "vsce package"
 	},
 	"devDependencies": {
 		"@types/mocha": "^9.1.0",
@@ -70,5 +71,8 @@
 		"eslint": "^8.13.0",
 		"mocha": "^9.2.1",
 		"typescript": "^4.7.2"
+	},
+	"dependencies": {
+		"vsce": "^2.9.2"
 	}
 }
